fix jumping carousel

--- a/stylesheet/carousel.css
+++ b/stylesheet/carousel.css
@@ -34,3 +34,9 @@
   width: 80%;
   margin-left: 10%;
 }
+
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img{
+    margin:auto;
+    padding: 0px;
+}
