--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -113,7 +113,7 @@ h1 {
   color: transparent;
   text-shadow: none;
   opacity: 1;
-  background-image: url(../images/fractal.jpg);
+  background-image: url(../images/fractal1.jpg);
   background-size: 40vw 40vh;
   -webkit-background-clip: text;
   background-clip: text;
